<resources>
    <string name="app_name">IPv4_over_IPv6</string>
    <string name="connect">连接VPN</string>

    <string name="address">Server Address:</string>
    <string name="port">Server Port:</string>
    <string name="secret">Shared Secret:</string>
    <string name="disconnect">断开VPN</string>

    <string name="connecting">Top VPN is connecting…</string>
    <string name="connected">Top VPN is connected!</string>
    <string name="disconnected">Top VPN is disconnected!</string>
    <string name="server_ip">2402:f000:5:8601:942c:3463:c810:6147</string>
    <string name="server_port">6666</string>
    <string name="c_log">From C:</string>
    <string name="local_address">Local IPv6:</string>
    <string name="local_ip">无IPv6访问权限，请检查网络</string>
    <string name="hello_world">Hello world!</string>

    <string name="debug">before start</string>
    <string name="welcome">Ready to be connected</string>

</resources>
